Вынесение бизнес логики и хранения данных из слоя контроллера в отдельные слои. Изменения которые обсуждали на вебинаре 2024.04.23

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>Мини-версия популярной соцсети с фотографиями котов.</description>
     <properties>
         <java.version>11</java.version>
+        <argLine>-Duser.language=en</argLine>
     </properties>
     <dependencies>
         <dependency>
