--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -12,9 +12,9 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://192.168.3.11:5432/catsgram
-spring.datasource.username=alnedorezov
-spring.datasource.password=12qwaszx
+spring.datasource.url=jdbc:postgresql://localhost:5432/catsgram
+spring.datasource.username=dbuser
+spring.datasource.password=12345
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
