Добавлен пример работы с брокером сообщений Apache Pulsar

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -13,6 +13,10 @@
 
 	<name>Catsgram Gateway</name>
 
+	<properties>
+		<pulsar.version>3.3.1</pulsar.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -49,6 +53,18 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.pulsar</groupId>
+			<artifactId>pulsar-client</artifactId>
+			<version>${pulsar.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-api</artifactId>
+			<version>1.38.0</version>
 		</dependency>
 
 		<dependency>
